unit testing env

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
-[env:native]
+[env:test]
     platform = native
-    build_flags =
-        -DARDUINO=101
+    test_framework = unity
+    test_build_src = yes
     lib_compat_mode = off
     lib_deps =
         https://github.com/FabioBatSilva/ArduinoFake.git
